--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pfanaccount test</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>pfanaccount</title>
 </head>
 <body>
-
+    <h1>Hi</h1>
+    <p>Hello</p>
 </body>
 </html>
